# kinGEMs

./: .gitignore  CONFIG_GUIDE.md  LICENSE  Makefile  PIPELINE_SUMMARY.md  QUICK_REFERENCE.md  README.md  environment.yml  kinGEMs_publication_timeline.md  pyproject.toml  requirements.txt  test_enhanced_diagnostics.py
configs/: 376_genome_cpd03198.json  378_genome_cpd03198.json  380_genome_cpd01262.json  382_genome_cpd03198.json  Kmarxianus_GEM.json  Lmajor_GEM.json  Pputida_iJN1463.json  Pputida_iJN746.json  Selongatus_iJB785.json  e_coli_core.json  fluxomics_iML1515_GEM.json  iML1515_GEM.json  iML1515_GEM_fva_ablation.json  iML1515_GEM_fva_ablation_no_biomass_constraint.json  iML1515_GEM_parallel_fva.json  iML1515_GEM_validation.json  validation_iML1515.json  yeast-GEM9.json
docs/: PIPELINE_SUMMARY.md  README.md  SCRIPT_CACHING_GUIDE.md  VENV_SETUP.md  mkdocs.yml
examples/: example_multiple_solutions.py
kinGEMs/: __init__.py  config.py  dataset.py  dataset_modelseed.py  features.py  fluxomics_validation.py  plots.py  utils.py  validation_utils.py
logs/: baseline_12498369.out  baseline_12667548.out  baseline_8638239.out  baseline_8737034.err  baseline_8737034.out  compile_12498372.out  compile_12667551.out  fluxomics_pipeline_21765723.err  fluxomics_pipeline_21844448.err  fluxomics_pipeline_21844448.out  fluxomics_pipeline_22508197.err  fluxomics_pipeline_22508197.out  fluxomics_pipeline_22508494.err  fluxomics_pipeline_22508494.out  fluxomics_pipeline_7618305.err  fluxomics_pipeline_7618305.out  fva_ablation_10901856.out  fva_ablation_21759793.err  (+33 more)
(+680 files in other folders)
